--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,13 +16,13 @@
           <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
         </li>
         <li>
-          <a href="{{ '/post' | prepend: site.baseurl }}">Blogs</a>
+          <a href="{{ '/blogs' | prepend: site.baseurl }}">Blogs</a>
         </li>
         <li>
-          <a href="{{ '/categories/' | prepend: site.baseurl }}">Category</a>
+          <a href="{{ '/category/' | prepend: site.baseurl }}">Category</a>
         </li>
         <li>
-          <a href="{{ '/tag' | prepend: site.baseurl }}">Tags</a>
+          <a href="{{ '/tags' | prepend: site.baseurl }}">Tags</a>
         </li>
         <!-- <li>
           <a href="{{ '/donate/' | prepend: site.baseurl }}">Donate</a>
