[add]add recent blog in home page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,13 +16,13 @@
           <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
         </li>
         <li>
-          <a href="{{ '/blogs' | prepend: site.baseurl }}">Blogs</a>
+          <a href="{{ '/archives' | prepend: site.baseurl }}">Archive</a>
         </li>
         <li>
-          <a href="{{ '/category/' | prepend: site.baseurl }}">Category</a>
+          <a href="{{ '/categories/' | prepend: site.baseurl }}">Category</a>
         </li>
         <li>
-          <a href="{{ '/tags' | prepend: site.baseurl }}">Tags</a>
+          <a href="{{ '/tags' | prepend: site.baseurl }}">Tag</a>
         </li>
         <!-- <li>
           <a href="{{ '/donate/' | prepend: site.baseurl }}">Donate</a>
@@ -34,7 +34,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
-            <li><a href="{{ '/author/' | prepend: site.baseurl }}">Author</a></li>
+            <li><a href="{{ '/about/' | prepend: site.baseurl }}">Author</a></li>
             <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS</a></li>
           </ul>
         </li>
