--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 ---
+
 <div class="container docs-container">
   <div class="row">
+
     <div class="col-md-3">
       <div class="sidebar hidden-print" role="complementary">
         <h1>导航</h1>
@@ -11,37 +13,43 @@ layout: default
         </div>
       </div>
     </div>
+
     <div class="col-md-9" role="main">
       <div class="panel docs-content">
         <div class="wrapper">
-            <header class="post-header">
-            </header>
-            <article class="post-content">
-              {{ content }}
-            </article>
-            <br />
-            <footer>
-              <div class="meta" style="text-align: right;">
-                Posted on <span class="postdate">{{ page.date | date: "%b %d, %Y" }}</span> By <a target="_blank" href="{{site.url}}">{{ site.author }}</a>
-              </div>
-            </footer>
+          <header class="post-header" style="text-align:center;">
+            <h1 class="post-title">{{ page.title }}</h1>
+          </header>
+          <hr>
+          <article class="post-content">
+            {{ page.content }}
+          </article>
+          <hr>
+          <footer>
+            <div class="meta" style="text-align: right;">
+              Posted on <span class="postdate">{{ page.date | date: "%b %d, %Y" }}</span> By <a target="_blank" href="{{site.url}}">{{ site.author }}</a>
+            </div>
+          </footer>
         </div>
       </div>
-      <div class="pagination clearfix">
-            <ul class = "pull-right">
-            {% if page.previous %}
-              <li class="prev"><a class="fa fa-arrow-circle-left" href="{{ page.previous.url | prepend: site.baseurl}}" title="{{ page.previous.title }}"> 前一篇</a></li>
-            {% else %}
-              <li class="prev disabled" ><a class="fa fa-arrow-circle-left"> 前一篇</a></li>
-            {% endif %}
-              <li><a class="fa fa-th" href="{{ '/blogs' | prepend: site.baseurl }}"> 所有日志</a></li>
-            {% if page.next %}
-              <li class="next"><a  href="{{ page.next.url | prepend: site.baseurl}}" title="{{ page.next.title }}">后一篇 <span class="fa fa-arrow-circle-right">  </span></a></li>
-            {% else %}
-              <li class="next disabled"><a >后一篇 <span class="fa fa-arrow-circle-right">  </span></a>
-            {% endif %}
-            </ul>
-      </div>
+
+      <ul class="pager">
+        <li class="previous">
+          {% if page.previous %}
+          <a href="{{ page.previous.url | prepend: site.baseurl}}" title="{{ page.previous.title }}">
+            <span class="glyphicon glyphicon-arrow-left	"></span> Previous
+          </a>
+          {% endif %}
+        </li>
+        <li class="next">
+          {% if page.next %}
+          <a  href="{{ page.next.url | prepend: site.baseurl}}" title="{{ page.next.title }}">
+            Next <span class="glyphicon glyphicon-arrow-right"></span>
+          </a>
+          {% endif %}
+        </li>
+      </ul>
+
       <div class="panel docs-content">
         <article class="post-content">
           <div class="wrapper">
