[add]增加个人简介

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: default
           </header>
           <hr>
           <article class="post-content">
-            {{ page.content }}
+            {{ content }}
           </article>
           <hr>
           <footer>
