--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,9 +33,9 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
-            <li><a href="{{ '/about/' | prepend: site.baseurl }}">Author</a></li>
-            <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS</a></li>
+              <li><a href="{{ '/about/' | prepend: site.baseurl }}">Author</a></li>
+              <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}">Rss</a></li>
+              <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
           </ul>
         </li>
       </ul>
