--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,14 @@
 <footer class="footer" role="contentinfo">
 	<div class="container">
-		<p class="copyright">Copyright &copy; 2014-{{ site.time | date: '%Y' }} <a href="{{site.resume_site}}"><code>{{ site.author }}</code></a>.</p>
-		<p>Powered by <a href="http://jekyllrb.com">Jekyll</a>, theme from <a href="http://lesscss.cn/">Less</a></p>
+		<div class="row">
+			<div class="col-md-3">
+				<p class="copyright">Copyright &copy; 2014-{{ site.time | date: '%Y' }} <a href="{{site.resume_site}}"><code>{{ site.author }}</code></a>.</p>
+				<p>Powered by <a href="http://jekyllrb.com">Jekyll</a>, theme from <a href="http://lesscss.cn/">Less</a></p>
+			</div>
+			<div class="col-md-9">
+				<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="100%" src="http://music.163.com/outchain/player?type=2&id=1217518&auto=1&height=66"></iframe>
+			</div>
+		</div>
 	</div>
 </footer>
 
