--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,8 @@
 	  		margin-bottom: 10px;
 	  	}
   	</style>
+	<!-- 微信分享链接中的缩略图 -->
+	<div style='margin:0 auto;width:0px;height:0px;overflow:hidden;'>
+		<img src="{{ '/styles/images/legolas_300x300.jpg' | prepend: site.baseurl }}">
+	</div>
 </head>
