--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,9 @@
 <footer class="footer" role="contentinfo">
 	<div class="container">
-        <p class="copyright">Copyright &copy; 2014-{{ site.time | date: '%Y' }} <a href="{{site.resume_site}}"><code>{{ site.author }}</code></a>.</p>
+		<p class="copyright">Copyright &copy; 2016-{{ site.time | date: '%Y' }} <a href="{{site.resume_site}}"><code>{{ site.author }}</code></a>.</p>
+		<p>Hosted on <a href="https://pages.github.com/">Github Pages</a></p>
 		<p>Powered by <a href="http://jekyllrb.com">Jekyll</a>, theme from <a href="http://lesscss.cn/">Less</a></p>
-    </div>
+	</div>
 </footer>
 
 <script src="{{ '/styles/js/jquery.min.js' | prepend: site.baseurl }}"></script>
