[add]每篇文章增加预览，以供首页显示

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,8 @@ layout: default
                     <hr>
                     <footer>
                         <div class="meta" style="text-align: right;">
-                            Posted on <span class="postdate">{{ page.date | date: "%b %d, %Y" }}</span> By <a target="_blank" href="{{site.url}}">{{ site.author }}</a>
+                            Posted on
+                            <span class="postdate">{{ page.date | date: "%b %d, %Y" }}</span> By <a target="_blank" href="{{site.url}}">{{ site.author }}</a>
                         </div>
                     </footer>
                 </div>
