--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
                     <a href="{{ '/categories/' | prepend: site.baseurl }}">Category</a>
                 </li>
                 <li>
-                    <a href="{{ '/tags' | prepend: site.baseurl }}">Tag</a>
+                    <a href="{{ '/tags' | prepend: site.baseurl }}">Tags</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
