修改首页右侧样式为"sidebar"

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,11 +1,11 @@
-<div class="left-col">
+<div class="left-col sidebar hidden-print">
     <div class="overlay">
 
     </div>
 
     <div class="intrude-less">
 	    <header id="header" class="inner">
-            <a href="{{ site.url }}" class="profilepic">	
+            <a href="{{ site.url }}" class="profilepic">
                 <img src="/styles/images/legolas.jpg" class="js-avatar">
             </a>
             <hgroup>
