--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html>
-
-  {% include head.html %}
-
-  <body class="index">
-
-    {% include header.html %}
-    {% include docs_header.html %}
-	<div class="container docs-container">
-		<div class="panel docs-content">
-        	<div class="wrapper">
-	            <article class="post-content">
-	            	{{ content }}
-	            </article>
-	            <hr>
+{% include head.html %}
+	<body class="index">
+		{% include header.html %}
+    	{% include docs_header.html %}
+		<div class="container docs-container">
+			<div class="row">
+        		<div class="col-md-9">
+					<div class="panel docs-content">
+						<div class="wrapper">
+							<header class="post-header" style="text-align:center;">
+                        		<h1 class="post-title">{{ page.title }}</h1>
+                    		</header>
+							<hr>
+							<article class="post-content">
+								{{ content }}
+							</article>
+						</div>
+					</div>
+        		</div>
+				
+				<div class="col-md-3">
+					{% include profile.html %}
+        		</div>
 			</div>
 		</div>
-	</div>
-    {% include footer.html %}
-  </body>
+    	{% include footer.html %}
+	</body>
 </html>
