--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
-<footer class="footer" role="contentinfo">
+<footer class="footer" role="contentinfo" style="text-align: center;">
 	<div class="container">
 		<p class="copyright">Copyright &copy; 2016-{{ site.time | date: '%Y' }} <a href="{{site.resume_site}}"><code>{{ site.author }}</code></a>.</p>
 		<p>
             Hosted on <a href="https://pages.github.com/">Github Pages</a>,
             Powered by <a href="http://jekyllrb.com">Jekyll</a>, 
-            theme from <a href="http://lesscss.cn/">Less</a>
+            Theme from <a href="http://lesscss.cn/">Less</a>
         </p>
     </div>
 </footer>
