--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="/" class="navbar-brand">
-                <img src="{{ '/styles/images/logo.jpg' | prepend: site.baseurl }}">
+                <img class="img-responsive" src="{{ '/styles/images/logo.jpg' | prepend: site.baseurl }}">
             </a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
@@ -16,7 +16,7 @@
                     <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
                 </li>
                 <li>
-                    <a href="{{ '/archives' | prepend: site.baseurl }}">Archive</a>
+                    <a href="{{ '/archives' | prepend: site.baseurl }}">Archives</a>
                 </li>
                 <li>
                     <a href="{{ '/categories/' | prepend: site.baseurl }}">Category</a>
@@ -30,7 +30,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="{{ '/about/' | prepend: site.baseurl }}">Author</a>
+                            <a href="{{ '/about/' | prepend: site.baseurl }}">About</a>
                         </li>
                         <li>
                             <a href="{{ '/feed.xml' | prepend: site.baseurl }}">Rss</a>
