--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,30 +1,24 @@
-<!DOCTYPE html>
-<html>
-{% include head.html %}
-	<body class="index">
-		{% include header.html %}
-    	{% include docs_header.html %}
-		<div class="container docs-container">
-			<div class="row">
-        		<div class="col-md-9">
-					<div class="panel docs-content">
-						<div class="wrapper">
-							<header class="post-header" style="text-align:center;">
-                        		<h1 class="post-title">{{ page.title }}</h1>
-                    		</header>
-							<hr>
-							<article class="post-content">
-								{{ content }}
-							</article>
-						</div>
-					</div>
+---
+layout: default
+---
+
+<div class="container docs-container">
+	<div class="row">
+		<div class="col-md-9" role="main">
+			<div class="panel docs-content">
+				<div class="wrapper">
+					<header class="post-header" style="text-align:center;">
+                        <h1 class="post-title">{{ page.title }}</h1>
+                    </header>
+					<hr>
+					<article class="post-content">
+						{{ content }}
+					</article>
         		</div>
-				
-				<div class="col-md-3">
-					{% include profile.html %}
-        		</div>
-			</div>
+    		</div>
 		</div>
-    	{% include footer.html %}
-	</body>
-</html>
+		<div class="col-md-3">
+			{% include profile.html %}
+        </div>
+	</div>
+</div>
