--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
                     <a href="{{ '/archives' | prepend: site.baseurl }}">Archives</a>
                 </li>
                 <li>
-                    <a href="{{ '/categories/' | prepend: site.baseurl }}">Category</a>
+                    <a href="{{ '/categories' | prepend: site.baseurl }}">Category</a>
                 </li>
                 <li>
                     <a href="{{ '/tags' | prepend: site.baseurl }}">Tags</a>
@@ -33,7 +33,7 @@
                             <a href="{{ '/about/' | prepend: site.baseurl }}">About</a>
                         </li>
                         <li>
-                            <a href="{{ '/feed.xml' | prepend: site.baseurl }}">Rss</a>
+                            <a href="{{ '/about/feed.xml' | prepend: site.baseurl }}">Rss</a>
                         </li>
                         <li>
                             <a rel="nofollow" target="_blank" href="{{site.github}}">Github</a>
