--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,17 @@ layout: default
                     <header class="post-header" style="text-align:center;">
                         <h1 class="post-title">{{ page.title }}</h1>
                     </header>
+                    <div class="post-title" style="text-align: center;">
+						<a><i class="glyphicon glyphicon-paperclip"></i></a>
+						{% for category in page.categories %}
+							<a href="{{ category | prepend: '/categories#' | append: '-ref' }}">&nbsp;{{ category }}&nbsp;</a>
+						{% endfor %}
+						&nbsp;
+						<a><i class="glyphicon glyphicon-tags"></i></a>
+						{% for tag in page.tags %}
+							<a href="{{ tag | prepend: '/tags#' | append: '-ref' }}">&nbsp;{{ tag }}&nbsp;</a>
+						{% endfor %}
+					</div>
                     <hr>
                     <article class="post-content">
                         {{ content }}
