[add]add share extension

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,8 +62,8 @@ layout: default
                         {% endif %}
                     </li>
                 </ul>
-            </div>
-            <div class="panel docs-content">
+                {% include extention/share %}
+                <hr>
                 <article class="post-content">
                     <div class="wrapper">
                         {% include extention/comments %}
