[modify]change the toc

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,9 +6,9 @@ layout: default
     <div class="row">
         <div class="col-md-3">
             <div class="sidebar hidden-print" role="complementary">
-                <h2>导航</h2>
                 <div id="navigation">
-                    <ul id="toc" class="ztree">
+                    <ul id="toc" class="nav sidenav">
+                    </ul>
                 </div>
             </div>
         </div>
