--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,8 @@ layout: default
         <div class="col-md-3">
             <div class="sidebar hidden-print" role="complementary">
                 <div id="navigation">
-                    <ul id="toc" class="nav sidenav">
-                    </ul>
+                    <div id="toc" class="nav sidenav">
+                    </div>
                 </div>
             </div>
         </div>
