[fix] 修复点击“read more”不能跳转到文章的错误

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,7 @@ layout: default
 						<p>{{ item.content | slice: 0,100 }}</p>
 					{% endif %}
 					<div style="text-align: right;">
-						<a href="{{ site.baseurl }}{{ post.url }}">
+						<a href="{{ site.baseurl }}{{ item.url }}">
 							<u>Read More</u>&nbsp;&nbsp;&nbsp;&nbsp;
 						</a>
 					</div>
