[fix] modify nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
                     <a href="{{ '/archives' | prepend: site.baseurl }}">Archives</a>
                 </li>
                 <li>
-                    <a href="{{ '/categories' | prepend: site.baseurl }}">Category</a>
+                    <a href="{{ '/categories' | prepend: site.baseurl }}">Categories</a>
                 </li>
                 <li>
                     <a href="{{ '/tags' | prepend: site.baseurl }}">Tags</a>
