[fix]some change

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,8 +34,8 @@ layout: default
 					{% endif %}
 					<div style="text-align: right;">
 						<a href="{{ site.baseurl }}{{ item.url }}">
-							<u>Read More</u>&nbsp;&nbsp;&nbsp;&nbsp;
-						</a>
+                            Read More
+                        </a>
 					</div>
 				</article>
 			</div>
