[fix] 修改评论插件提示

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,6 +61,8 @@ layout: default
                     </li>
                 </ul>
                 <hr>
+                    <p><strong>本站点<code class="highlighter-rouge">legolasng.github.io</code>的评论插件已经替换为Disqus，需要FQ才能使用。</strong></p>
+                <hr>
                 <article class="post-content">
                     <div class="wrapper">
                         {% include extention/comments %}
