--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -12,7 +12,7 @@ layout: default
                     </header>
 					<hr>
 					<article class="post-content">
-						{{ content }}
+						{{ page.content }}
 					</article>
         		</div>
     		</div>
