--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,10 +25,13 @@
                     <a href="{{ '/tags' | prepend: site.baseurl }}">Tags</a>
                 </li>
                 <li>
+                    <a href="{{ '/about/book' | prepend: site.baseurl }}">Books</a>
+                </li>
+                <li>
                     <a href="{{ '/feed.xml' | prepend: site.baseurl }}">Rss</a>
                 </li>
                 <li>
-                    <a href="{{ '/about/' | prepend: site.baseurl }}">About</a>
+                    <a href="{{ '/about' | prepend: site.baseurl }}">About</a>
                 </li>
             </ul>
         </nav>
