[modify] rename book to books

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
                     <a href="{{ '/tags' | prepend: site.baseurl }}">Tags</a>
                 </li>
                 <li>
-                    <a href="{{ '/about/book' | prepend: site.baseurl }}">Books</a>
+                    <a href="{{ '/about/books' | prepend: site.baseurl }}">Books</a>
                 </li>
                 <li>
                     <a href="{{ '/feed.xml' | prepend: site.baseurl }}">Rss</a>
