--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -15,14 +15,16 @@ layout: default
 						{{ content }}
 					</article>
 				</div>
-				
+			</div>
+
+			<div class="panel docs-content">
 				<p><strong>本站点<code class="highlighter-rouge">legolasng.github.io</code>的评论插件已经替换为Disqus，需要FQ才能使用。</strong></p>
-                <hr>
-                <article class="post-content">
-                    <div class="wrapper">
-                        {% include extention/comments %}
-                    </div>
-                </article>
+				<hr>
+				<article class="post-content">
+					<div class="wrapper">
+						{% include extention/comments %}
+					</div>
+				</article>
 			</div>
 		</div>
 		
