--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,6 @@
 	<script src="{{ '/styles/js/jquery.min.js' | prepend: site.baseurl }}"></script>
 	<!-- 微信分享链接中的缩略图 -->
 	<div style='margin:0 auto;width:0px;height:0px;overflow:hidden;'>
-		<img src="{{ '/styles/images/legolas_300x300.jpg' | prepend: site.baseurl }}">
+		<img src="{{ '/styles/images/logo.jpg' | prepend: site.baseurl }}">
 	</div>
 </head>
