--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -2,7 +2,7 @@
     <div class="navigation" style="text-align: center;">
         <br>
         <a href="{{ site.url }}">
-            <img src="/styles/images/legolas99x99.jpg" class="img-circle">
+            <img src="/styles/images/logo.jpg" class="img-circle">
         </a>
 
         <h1>{{ site.author }}</h1>
