--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -6519,8 +6519,8 @@ hr {
   border-color: #111f36;
 }
 .docs-nav .container .navbar-brand {
-  margin: 12px 0 0;
-  width: 100px;
+  margin: 10px 10px 10px 10px;
+  width: 40px;
   padding: 0;
 }
 .docs-nav .container .navbar-brand img {
