--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="/" class="navbar-brand">
-                <img class="img-responsive" src="{{ '/styles/images/logo.jpg' | prepend: site.baseurl }}">
+                <img class="img-circle" src="{{ '/styles/images/logo.jpg' | prepend: site.baseurl }}">
             </a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
